bluec-tests/tests/invalid/types_longlong/long_constant_as_var.c
int main(void) {
    /* You can't use a long long literal where an identifier is required */
    int 10LL;
    return 0;
}